[package]
name = "polaris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "3", features = ["derive"] }
percent-encoding = "2"
rustls = "0.20"
rustls-pemfile = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
url = "2"